--- a/package.json
+++ b/package.json
@@ -1,35 +1,28 @@
 {
-  "name": "pinance",
-  "version": "0.1.0",
-  "description": "pi extension for financial data tools (crypto, stocks, SEC filings, etc.)",
-  "type": "module",
-  "private": true,
-  "scripts": {
-    "check": "biome check .",
-    "check:fix": "biome check --write .",
-    "typecheck": "tsc --noEmit"
-  },
-  "pi": {
-    "extensions": [
-      "./src/index.ts"
-    ]
-  },
-  "keywords": [
-    "pi",
-    "pi-extension",
-    "finance",
-    "stocks",
-    "crypto",
-    "sec-filings"
-  ],
-  "license": "MIT",
-  "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@sinclair/typebox": "^0.34.14",
-    "@types/node": "^22.10.5",
-    "typescript": "^5.7.3"
-  },
-  "peerDependencies": {
-    "@mariozechner/pi-coding-agent": "*"
-  }
+	"name": "pinance",
+	"version": "0.1.0",
+	"description": "pi extension for financial data tools (crypto, stocks, SEC filings, etc.)",
+	"type": "module",
+	"private": true,
+	"scripts": {
+		"check": "biome check .",
+		"check:fix": "biome check --write .",
+		"typecheck": "tsc --noEmit",
+		"prepare": "husky"
+	},
+	"pi": {
+		"extensions": ["./src/index.ts"]
+	},
+	"keywords": ["pi", "pi-extension", "finance", "stocks", "crypto", "sec-filings"],
+	"license": "MIT",
+	"devDependencies": {
+		"@biomejs/biome": "^1.9.4",
+		"@sinclair/typebox": "^0.34.14",
+		"@types/node": "^22.10.5",
+		"husky": "^9.1.7",
+		"typescript": "^5.7.3"
+	},
+	"peerDependencies": {
+		"@mariozechner/pi-coding-agent": "*"
+	}
 }
