--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 	"scripts": {
 		"check": "biome check .",
 		"check:fix": "biome check --write .",
+		"test": "vitest run",
+		"test:watch": "vitest",
 		"typecheck": "tsc --noEmit",
 		"prepare": "husky"
 	},
@@ -20,6 +22,7 @@
 		"@sinclair/typebox": "^0.34.14",
 		"@types/node": "^22.10.5",
 		"husky": "^9.1.7",
+		"vitest": "^2.1.8",
 		"typescript": "^5.7.3"
 	},
 	"peerDependencies": {
