Allow snake_case for object properties in Biome
External APIs use snake_case parameter names

--- a/biome.json
+++ b/biome.json
@@ -46,6 +46,10 @@
 							{
 								"selector": { "kind": "typeLike" },
 								"formats": ["PascalCase"]
+							},
+							{
+								"selector": { "kind": "objectLiteralProperty" },
+								"formats": ["camelCase", "snake_case", "CONSTANT_CASE"]
 							}
 						]
 					}
