Disable noBarrelFile rule in Biome
Barrel files are needed for clean module re-exports

--- a/biome.json
+++ b/biome.json
@@ -28,6 +28,9 @@
 			"correctness": {
 				"noNodejsModules": "off"
 			},
+			"performance": {
+				"noBarrelFile": "off"
+			},
 			"style": {
 				"noDefaultExport": "off",
 				"useNamingConvention": {
