Disable noProcessEnv and noSecrets rules
These rules conflict with necessary env access and test URLs

--- a/biome.json
+++ b/biome.json
@@ -23,7 +23,9 @@
 		"rules": {
 			"all": true,
 			"nursery": {
-				"all": true
+				"all": true,
+				"noProcessEnv": "off",
+				"noSecrets": "off"
 			},
 			"correctness": {
 				"noNodejsModules": "off"
