--- a/package.json
+++ b/package.json
@@ -13,9 +13,18 @@
 		"prepare": "husky"
 	},
 	"pi": {
-		"extensions": ["./src/index.ts"]
+		"extensions": [
+			"./src/index.ts"
+		]
 	},
-	"keywords": ["pi", "pi-extension", "finance", "stocks", "crypto", "sec-filings"],
+	"keywords": [
+		"pi",
+		"pi-extension",
+		"finance",
+		"stocks",
+		"crypto",
+		"sec-filings"
+	],
 	"license": "MIT",
 	"devDependencies": {
 		"@biomejs/biome": "^2.3.11",
