--- a/biome.json
+++ b/biome.json
@@ -47,6 +47,10 @@
 							{
 								"selector": { "kind": "objectLiteralProperty" },
 								"formats": ["camelCase", "snake_case", "CONSTANT_CASE"]
+							},
+							{
+								"selector": { "kind": "typeProperty" },
+								"formats": ["camelCase", "snake_case"]
 							}
 						]
 					}
