--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@biomejs/biome": "^2.3.11",
 		"@sinclair/typebox": "^0.34.14",
 		"@types/node": "^25.0.6",
+		"@vitest/coverage-v8": "^4.0.16",
 		"dotenv": "^17.2.3",
 		"husky": "^9.1.7",
 		"typescript": "^5.7.3",
