--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,10 +7,9 @@ on:
     branches: [main]
 
 jobs:
-  check:
-    name: Lint, Type Check & Test
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -18,25 +17,37 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: "22"
+          node-version: "25"
           cache: "npm"
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Biome check (lint + format)
+      - name: Run linter
         run: npm run check
 
-      - name: TypeScript type check
-        run: npm run typecheck
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: "25"
+          cache: "npm"
+
+      - name: Install dependencies
+        run: npm ci
 
       - name: Run tests
         run: npm test
 
-  security:
-    name: Security Audit
+  typecheck:
+    name: Type Check
     runs-on: ubuntu-latest
-
     steps:
       - name: Checkout
         uses: actions/checkout@v6
@@ -44,11 +55,27 @@ jobs:
       - name: Setup Node.js
         uses: actions/setup-node@v6
         with:
-          node-version: "22"
+          node-version: "25"
           cache: "npm"
 
       - name: Install dependencies
         run: npm ci
 
-      - name: Audit dependencies
+      - name: TypeScript check
+        run: npm run typecheck
+
+  audit:
+    name: Security Audit
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v6
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v6
+        with:
+          node-version: "25"
+          cache: "npm"
+
+      - name: Security audit
         run: npm audit --audit-level=high
